Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                     <div class="review-header">
                         <div class="review-avatar">M</div>
                         <div class="review-info">
-                            <h4>Marco Rossi</h4>
+                            <h4>Marco Carnimeo</h4>
                             <p>Investitore Immobiliare</p>
                         </div>
                     </div>
@@ -551,7 +551,7 @@
                     <div class="review-header">
                         <div class="review-avatar">G</div>
                         <div class="review-info">
-                            <h4>Giulia Bianchi</h4>
+                            <h4>Giulia Mazzei</h4>
                             <p>Property Manager</p>
                         </div>
                     </div>
@@ -563,7 +563,7 @@
                     <div class="review-header">
                         <div class="review-avatar">A</div>
                         <div class="review-info">
-                            <h4>Alessandro Verdi</h4>
+                            <h4>Alessandro Miceli</h4>
                             <p>Architetto</p>
                         </div>
                     </div>
