Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="form-group" style="margin-bottom: 1.25rem;"><label>Prezzo Acquisto (€)</label><input type="number" id="price" value="250000" oninput="app.calc.debouncedUpdate()"></div>
                     <div class="input-grid">
                         <div class="form-group"><label>Ristrutturazione (€)</label><input type="number" id="reno" value="15000" oninput="app.calc.debouncedUpdate()"></div>
-                        <div class="form-group"><label>Spese Notaio (€)</label><input type="number" id="closing" value="10000" oninput="app.calc.debouncedUpdate()"></div>
+                        <div class="form-group"><label>Spese Notaio (€)</label><input type="number" id="closing" value="25000" oninput="app.calc.debouncedUpdate()"></div>
                     </div>
                     <div class="input-grid">
                         <div class="form-group"><label>LTV Mutuo (%)</label><input type="number" id="ltv" value="80" oninput="app.calc.debouncedUpdate()"></div>
@@ -215,10 +215,10 @@
         <section class="reviews-section">
             <h2 class="reviews-title">Cosa dicono i professionisti</h2>
             <div class="reviews-grid">
-                <div class="review-card"><div class="review-header"><div class="review-avatar">M</div><div><h4>Marco Rossi</h4><p>Investitore Immobiliare</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Uno strumento indispensabile. Prima perdevo ore su Excel, ora in 5 minuti ho un Business Plan pronto per la banca."</p></div>
-                <div class="review-card"><div class="review-header"><div class="review-avatar">G</div><div><h4>Giulia Bianchi</h4><p>Property Manager</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Interfaccia pulita e calcoli precisissimi. Il calcolo automatico della rata mutuo e del cash flow netto è un game changer."</p></div>
-                <div class="review-card"><div class="review-header"><div class="review-avatar">A</div><div><h4>Alessandro Verdi</h4><p>Architetto</p></div></div><div class="stars">★★★★☆</div><p class="review-text">"Ottimo per valutare velocemente la fattibilità di un'operazione di ristrutturazione e messa a reddito. Consigliato!"</p></div>
-                <div class="review-card"><div class="review-header"><div class="review-avatar">S</div><div><h4>Sofia Esposito</h4><p>Consulente Finanziario</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Finalmente un tool web-based serio. La possibilità di salvare e confrontare diversi scenari è fondamentale per il mio lavoro."</p></div>
+                <div class="review-card"><div class="review-header"><div class="review-avatar">M</div><div><h4>Marco Rocci</h4><p>Investitore Immobiliare</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Uno strumento indispensabile. Prima perdevo ore su Excel, ora in 5 minuti ho un Business Plan pronto per la banca."</p></div>
+                <div class="review-card"><div class="review-header"><div class="review-avatar">G</div><div><h4>Giulia Bagnifoco</h4><p>Property Manager</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Interfaccia pulita e calcoli precisissimi. Il calcolo automatico della rata mutuo e del cash flow netto è un game changer."</p></div>
+                <div class="review-card"><div class="review-header"><div class="review-avatar">A</div><div><h4>Alessandro Cascia</h4><p>Architetto</p></div></div><div class="stars">★★★★☆</div><p class="review-text">"Ottimo per valutare velocemente la fattibilità di un'operazione di ristrutturazione e messa a reddito. Consigliato!"</p></div>
+                <div class="review-card"><div class="review-header"><div class="review-avatar">S</div><div><h4>Sofia Zizzi</h4><p>Consulente Finanziario</p></div></div><div class="stars">★★★★★</div><p class="review-text">"Finalmente un tool web-based serio. La possibilità di salvare e confrontare diversi scenari è fondamentale per il mio lavoro."</p></div>
             </div>
         </section>
 
@@ -664,3 +664,4 @@
     </script>
 </body>
 </html>
+
